<resources>
    <!-- Main Activity - General -->
    <string name="logo_image_description">Image of a workout mangament.</string>
    <string name="app_name">WOR-Workout Managemnent</string>
    <string name="workout_today">Workout</string>
    <string name="stats">Stats</string>
    <string name="calendar">Calendar</string>
    <!-- Workout Today Fragment -->
    <string name="workout_image_description">Image of an apple and a checklist.</string>
    <string name="exercise_image_description">Image of a type of exercise.</string>
    <string name="workout_instruction">Add a calisthenic, cardio, or strength\nexercise for the current day.</string>
    <string name="app_name_abr">WOR</string>
    <!-- Stats Fragment -->
    <string name="body_weight">Weight</string>
    <string name="Height_Stat">Height</string>
    <string name="update">Update</string>
    <string name="no_data">No data points</string>
    <string name="none">None</string>
    <string name="update_stat_title">Update body stats: </string>
    <string name="body_weight_w_units">Body Weight (kg)</string>
    <string name="height_w_units">Height (m)</string>
    <string name="Height">Height (cm)</string>
    <string name="Weight">Weight(kg)</string>
    <!-- Calendar Fragment -->
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <!-- Cardio Fragment -->
    <string name="cardio_session">Cardio</string>
    <string name="duration">Duration (m)</string>
    <string name="intensity">Intensity (s)</string>
    <string name="new_session">New Session</string>
    <!-- Strength Fragment -->
    <string name="strength_session">Strength</string>
    <string name="set">Set</string>
    <string name="rep">Rep(s)</string>
    <string name="Kilogram">kg</string>
    <string name="new_set">New Set</string>
    <!-- Favorite Fragment -->
    <string name="favorite_instructions_image_description">Image of hearts.</string>
    <string name="favorite_image_description">Image of a heart.</string>
    <string name="favorite_instructions">Favorite an exercise to access \nit quickly in this tab.</string>
    <!-- Custom Fragment -->
    <string name="custom_instructions_image_description">Image of creativity.</string>
    <string name="custom_instruction">Access any custom exercise you create \nin this tab.</string>
    <string name="add_exercise">Add an exercise: </string>
    <!-- Session Fragment -->
    <string name="session">Session</string>
    <!-- Workout Another Day Fragment -->
    <string name="workout_another_day">Workout Another Day</string>
    <!-- Floating Button -->
    <string name="calisthenics">calisthenics</string>
    <string name="cardio">cardio</string>
    <string name="strength">strength</string>
    <string name="add">add</string>
    <!-- Note Dialog Fragment -->
    <string name="add_note">Add a note: </string>
    <string name="note">Note</string>
    <!-- Miscellaneous -->
    <string name="x">"x"</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="toast_error_message">Fields cannot be empty.</string>

    <string name="app_height">AppHeight</string>
    <string name="app_weight">AppWeight</string>

    <!--splash view-->
    <string name="status_load_ad_success">Ad loading state: loaded successfully.</string>
    <string name="status_load_ad_fail">Ad loading state: failed to be loaded. Error code: </string>
    <string name="status_ad_dismissed">Splash Ad is dismissed.</string>
    <string name="media_name">HUAWEI Ads</string>
    <string name="ad_id_splash">testd7c5cewoj6</string>
    <string name="ad_id_splash_landscape">testq6zq98hecj</string>
    <string name="username">Username</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="food">Food</string>
    <string name="total_kcal">500 kcal</string>
    <string name="signout">Sign Out</string>
</resources>