<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ProfileFragment">

        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="36dp"
                android:backgroundTint="@color/gray"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/username"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="226dp"
                android:layout_marginBottom="198dp"
                android:background="@drawable/view_style_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view3"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/view_style_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <View
                android:id="@+id/view2"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/view_style_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view"
                app:layout_constraintVertical_bias="0.454" />

            <TextView
                android:id="@+id/tvNumberAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/view3"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/view3"
                app:layout_constraintVertical_bias="0.424" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2"
                app:layout_constraintVertical_bias="0.424" />

            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="21dp"
                android:layout_height="52dp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.823"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <NumberPicker
                android:id="@+id/numberPicker2"
                android:layout_width="21dp"
                android:layout_height="52dp"
                app:layout_constraintBottom_toBottomOf="@+id/view3"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintHorizontal_bias="0.82"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/view3" />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_kcal"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:drawableRightCompat="@drawable/ic_baseline_arrow_drop_down_circle_24"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.853"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/view2"
                app:layout_constraintVertical_bias="0.424" />

            <Button
                android:id="@+id/sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:text="@string/signout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.517"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:layout_constraintVertical_bias="0.945" />

            <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
                android:id="@+id/HuaweiIdAuthButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="140dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</FrameLayout>